--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,95 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.container {
+  width: 100%;
+  height: 731px;
+} 
+.header {
+  background: linear-gradient(to bottom, #1c5380, #06365f);
+  height: 300px;
+  width: 100%;
+}
+.logo-login {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 160px;
+  margin-right: 150px;
+}
+.logo-instagram {
+  margin-right: 120px;
+}
+.logo-instagram-img {
+  width: 250px;
+}
+.login-btn {
+  border: 1px solid #06365f;
+  text-decoration: none;
+  border-radius: 3px;
+  color: #fff;
+  padding: 5px 7px 0px;
+  height: 34px;
+  font-weight: bold;
+  font-size: 14px;
+  background: linear-gradient(to bottom, #1c5380, #06365f);
+}
+.main-context {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 150px;
+}
+.bold {
+  font-weight: bold;
+}
+.main-info{
+  background-color: #fff;
+  width: 400px;
+  height: 400px;
+  padding: 0 25px;
+  border-radius: 5px;
+  position: relative;
+  bottom: 50px;
+}
+.mobiles {
+  position: relative;
+  bottom: 175px;
+}
+.title {
+  color: #06365f;
+  width: 250px;
+}
+.explication {
+  margin-bottom: 2em;
+}
+.information {
+  margin-block-end: 0.6em;
+  margin-block-start: 0.6em;
+}
+.logo-download {
+  margin-left: 20px;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.footer-links {
+  list-style-type: none;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+}
+.link-footer {
+  text-decoration: none;
+  color: #06365f;
+  display: inline;
+  padding: 0 10px;
+}
+.copyright{
+  color: grey;
+  margin: 15px;
+}
