--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -35,9 +35,15 @@ body {
   background-size: cover;
 }
 
-.frame > h4, .frame > p { 
-  padding: 20px 0px 0px 2 0px;
+.frame > h4, .frame > p ,  h1 { 
+  padding: 30px 0px 0px 30px;
 }
+
+h1 { 
+  font-size: 30px;
+  font-weight: bold;
+  color: #1c5380;
+} 
 
 .caja1 {
   width: 40%;
@@ -49,12 +55,17 @@ body {
   margin: 2px;
 }
 
+.spotify-mobile  {
+  width: 80%;
+  max-width: 330px;
+}
+
 .spotify-logo {
   width: 80%;
   margin-right: 20%;
 }
 
-.caja2 > div {
+.caja2 > section {
   width: 90%;
   margin: 2% 5% 0% 5%;
   display: inline-flex;
@@ -62,12 +73,20 @@ body {
 }
 
 button {
-  background-color: #6F7EDD;;
+  margin-left: 10%;
+  display: flex;
+  background-color: #6F7EDD;
   border: 1px solid black;
   color: white;
   border-radius: 4px;
-  padding: 12px 16px;
+  height: 50px;
   font-size: 16px;
+  width: 20%;
+  position: relative;
+}
+
+button > p {
+  width: 80px;
 }
 
 .sectionMain{
@@ -76,6 +95,10 @@ button {
   display: inline-flex;
   position: relative;
 }
+
+.divButton { 
+  float: right;
+} 
 
 nav {
   text-align: center;
@@ -96,4 +119,9 @@ li {
 li:not(:last-child) {
   color: #1c5380;
   margin-right: 15px;
+}
+
+.sectinoAndroidIphone > img {
+  margin: 4% 4% 4% 4%;
+  width: 30%;
 }
