--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,77 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.containerup {
+  background-color: #1c5380;
+  height: 300px;
+}
+
+.panel {
+  margin: 0 auto;
+  position: relative;
+  padding-top: 100px;
+  width: 1000px;
+}
+
+.phones {
+  position: relative;
+  float: left;
+  width: 20%;
+}
+
+.panellogo {
+  position: relative;
+  float: right;
+  width: 65%;
+}
+
+.login {
+  float: right;
+  background-color: #1c5380;
+  font-size: 15px;
+  color: #fff;
+}
+
+.containermiddle{
+  background-color: #fff;
+  padding: 25px;
+}
+
+.h3 {
+  font-size: 24px;
+  color: #1c5380;
+}
+
+.android {
+  float: left;
+  width: 150px;
+  height: 50px;
+}
+
+.iphone {
+  float: right;
+  width: 150px;
+  height: 50px;
+}
+
+.footer {
+  position: relative;
+  padding-top: 200px;
+  font-size: 18px;
+  color: #06365f;
+  display: inline-block;
+}
+
+
+.footer ul {
+  display: inline-flex;
+}
+
+.footer ul li {
+  list-style: none;
+  margin-left: 20px;
+}
+.copy {
+  color: grey;
+}
