--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,113 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800&display=swap');
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 'Montserrat', "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+*, *::after. *::before {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
+
+.main {
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(0deg, white 60%, #1c5380 50%);
+}
+
+.phone-image {
+  margin: 5% 5% 5% 5%;
+}
+
+.all-content {
+  padding-bottom: 80px;
+}
+
+.logo-login-button {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.login-button {
+  position: absolute;
+  margin-left: 15%;
+  margin-top: 5%;
+  background-color:#1c5380;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  padding: 7px 10px;
+  border-radius: 4px;
+  vertical-align:middle
+  border: 1px solid #06365f;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
+}
+
+h1 {
+  color:#06365f;
+  font-weight: bold;
+}
+
+.white-box-descriptive {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  width: 504px;
+  height: 284px; 
+  position: relative;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.white-box-descriptive-content {
+  margin: 10px 40px;
+}
+
+.white-box-descriptive-content p {
+  font-weight: 500;
+  color:#636e72;
+  margin-bottom: 10px;
+  line-height: 28px; 
+}
+
+.download-stores {
+  margin-top: 25px;
+}
+
+.download-stores a {
+  margin-left: 10px;
+}
+
+.footer {
+  margin-bottom: 5%;
+  margin-top: 2%;
+}
+
+.footer-links {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 0 25%;
+  font-weight: 800;
+  font-size: 0.8em;
+}
+
+.footer-links li a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+.footer-links li:last-child {
+  color: #636e72;
 }
