--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,104 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+strong {
+  font-weight: 400;
+}
+
+a {
+  text-decoration: none;
+}
+
+#background {
+  position: absolute;
+  background-image: url(../images/bgtile.png);
+  background-size: cover;
+  width: 100%;
+  height: 250px;
+  z-index: -1;
+}
+
+main {
+  width: 900px;
+  margin: 0 auto;
+  padding: 75px 0 0 0;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  justify-items: center;
+  grid-row: 1;
+}
+
+#content {
+  position: relative;
+  margin: 20px 0 20px 0;
+}
+
+#home-icon {
+  position: absolute;
+  width: 20px;
+  padding: 5px 10px;
+}
+
+#login {
+  position: absolute;
+  top: 25px;
+  right: 10px;
+}
+
+#login a {
+  color: #FFF;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 11px 12px 11px 40px;
+  background-color: rgba(255,255,255,0.1);
+  border: 0;
+  border-radius: 4px;
+}
+
+#frame {
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  width: 500px;
+  height: 250px;
+}
+
+#call-to-action {
+  padding: 40px 50px;
+}
+
+#call-to-action h1 {
+  color: #06365f;
+  margin: 0;
+  line-height: 1.3;
+}
+
+.button {
+  padding: 15px 10px 0 0;
+}
+
+footer {
+  font-size: 11px;
+  text-transform: uppercase;
+  font-weight: 600;
+  width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: 200px;
+}
+
+footer a {
+  color: #1c5380;
+}
+
+footer #copyright {
+  color: #999;
 }
