--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,76 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+}
+
+
+/*#container {
+    border: 1px solid green;
+    position: fixed;
+    height: 100%;
+}*/
+
+.blue-part {
+    height: 230px;
+    width: 100%;
+    background-color: #1c5380;
+    position: absolute;
+}
+
+.phone-img {
+    position: absolute;
+    margin: 70px 200px;
+}
+
+.instagram-logo-and-login {
+    position: absolute;
+    margin: 70px 550px 0;
+}
+
+.information {
+    position: absolute;
+    margin: 170px 550px;
+    width: 500px;
+    height: 300px;
+    background-image: url("../images/frame.png");
+}
+
+.img-iphone-android {
+    position: absolute;
+    margin: 510px 600px 0;
+    width: 325px;
+}
+
+.footer {
+    position: absolute;
+    margin-top: 610px;
+    width: 100%;
+    height: 30px;
+}
+
+ul {
+    text-align: center;
+    color: #06365f;
+}
+
+li {
+    display: inline;
+    list-style: none;
+    padding-left: 20px;
+}
+
+h3 {
+    padding-left: 20px;
+    color: #06365f;
+}
+
+p {
+    padding-left: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#gray-color-instagram {
+    color: gray
 }
