--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,106 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header{
+  background-color: #1c5380;
+  background-image: url('./../images/bgtile.png');
+  height: 250px;
+}
+
+#brand{
+  height: 60px;
+  display: inline;
+}
+#btnLogin{
+  display: inline-block;
+  
+  color: white;
+  border: 1px solid #06365f;
+  margin: 5px 0 0 60px;
+  padding: 5px 10px;
+  font-weight: bold;
+
+  background-image: -webkit-linear-gradient(bottom, #4885b8, #06365f);
+  background-image: -moz-linear-gradient(top, #4885b8, #06365f);
+  background-image: -ms-linear-gradient(top, #4885b8, #06365f);
+  background-image: -o-linear-gradient(top, #4885b8, #06365f);
+  background-image: linear-gradient(to bottom, #4885b8, #06365f);
+
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+}
+#btnLogin img{
+  height: 20px;
+  margin-right: 8px;
+}
+
+.body{
+  position: relative;
+  width: 100vw;
+  margin: 0 auto;
+  min-height: 100px;
+  margin-top: -125px;
+}
+
+.content{
+  width: 60%;
+  margin: 0 auto;
+  vertical-align: top;
+}
+
+.content img{
+  float: left;
+}
+
+.info{
+  float: left;
+  margin-left: 50px;
+}
+.info::after{
+  clear: both;
+}
+.box{
+  position: relative;
+  background-image: url('./../images/frame.png');
+  background-repeat: no-repeat;
+  width: 400px;
+  top: 0;
+  margin: 25px 0;
+  padding: 30px;
+  box-sizing: border-box;
+}
+
+.box p{
+  font-size: .9rem;
+}
+.box img {
+  height: 40px;
+  margin: 10px 8px 0 0;
+}
+footer{
+  clear: both;
+  text-align: center;
+  padding: 50px 0;
+  text-transform: uppercase;
+}
+
+footer li{
+  display: inline;
+  color: #1c5380;
+  margin-right: 15px;
+  font-size: .8rem;
+}
+
+footer #copy{
+  color: grey;
+}
+#title{
+  color: #06365f;
+  font-size: 1.4rem;
+  margin: 0;
+}
+b{
+  font-weight: bold;
+}
