--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,75 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+.contenedor {
+  position: relative;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header {
+  position: absolute;
+  width: 100vw;
+  height: 280px;
+  background-image: url(../images/bgtile.png);
+  z-index: -1;
+}
+
+.background {
+  position: absolute;
+  margin: 12% 20% 90% 47%;
+  z-index: -1;
+}
+
+.iphone {
+  position: absolute;
+  margin: 10px 60% 20% 22%
+}
+
+.brandlog {
+  width: 50%;
+  position: absolute;
+  display: inline;
+  margin: 40px 20% 60% 47%;
+}
+
+.button {
+  width: 160px;
+  position: absolute;
+  margin: 60px 20% 60% 77%;
+}
+
+.but1 {
+  background-color: #1c5380;
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 20px;
+}
+
+
+.textbox {
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 30%;
+  position: absolute;
+  text-align: justify;
+  margin: 12% 20% 60% 50%;
+  color: #06365f;
+}
+
+footer {
+  position: absolute;
+  margin-top: 40%;
+  margin-left: 35%;
+  color: #06365f;
+  font-weight: bold;
+}
+
+.iphone1 {
+  margin-right: 15px;
+}
+
