--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,104 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  text-align: center;
+
 }
+
+header {
+  background-color: #1c5380;
+  height: 350px;
+}
+
+.central-part {
+  display: inline-block;
+  margin-top: -200px;
+  text-align: left;
+  
+}
+
+h2 {
+  color: #1c5380;
+}
+
+.brand-button {
+  display: inline-block;
+}
+
+#brand-img {
+  height: 60px;
+  width: auto;
+  position: relative;
+  left:10px;
+  margin-top: 10px;
+  
+
+}
+
+#button {
+  height: 30px;
+  padding: 0px;
+  width: 80px;
+  position: relative;
+  bottom: 22px;
+  left: 75px;
+  background-color: #1c5380;
+  color: white;
+  
+}
+
+#home-img{
+  position: relative;
+  right: 7px;
+  top: 2px;
+}
+
+#phones {
+  float: left;
+}
+
+section {
+  width: 400px;
+  float: left;
+  padding-left: 30px;
+  
+}
+
+.brand-text {
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 30px;
+  text-align: left;
+
+}
+
+footer {
+  padding-bottom: 150px;
+  position: absolute;
+  width: 100%;
+  
+  
+}
+
+ul {
+  list-style-type: none;
+  margin: 0 auto;
+  position: relative;
+  top: 50px;
+}
+
+li {
+  display: inline-block;
+  margin: 15px;
+  text-transform: uppercase;
+  font-size: .7rem;
+  color: #06365f;
+  text-decoration: none;
+}
+
+#copy {
+  color: grey;
+}
+
+
