--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,98 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+
+/*Colors to use:
+//dark blue: #06365f
+//light blue: #1c5380*/
+
+
+
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0; 
+  padding: 0;
+  
+}
+
+#div-f{
+  background-color:#3E7598;
+  height: 280px;
+  position: relative;
+}
+
+.logo{
+  position: absolute;
+  margin-left: 660px;
+  margin-top: 100px;
+}
+
+#home {
+  color: white;
+  background-color: #1c5380;
+  margin-left: 1080px;
+  margin-top: 127px;
+  border-radius: 10%;
+  border-color:#06365f;
+  ;
+}
+
+#phones{
+  position: absolute;
+  margin-left: 300px;
+  margin-top: 100px;
+}
+
+.box{
+  margin-left: 660px;
+  margin-top: 50px;
+  width: 500px;
+  height: 300px;
+  position: relative;
+  text-align: center;
+  border-radius: 30%;
+}
+
+.title {
+  background-color: rgba(255,255,255,1);
+  padding: 25px 0px 20px;
+
+}
+
+h2{
+  position: relative;
+  color: #06365f;
+  font-size: 1.5em;
+  margin-right: 20px;
+}
+
+
+.play-store{
+  position: relative;
+  margin-left: 6px;
+  margin-top: 40px;
+
+}
+
+footer{
+  position: relative;
+  margin-top: 380px;
+  width: 100%;
+  align-content: center;
+  font-size: 14px;
+}
+
+ul{
+  margin-left: 30%;
+  padding: 3pt;
+}
+
+
+li{
+  color: #80AEB5;   
+  display: inline-block;
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+footer h6{
+  color: #969691;
 }
